make qr code optional and improve display performance by generating code after the display is updated (batch updating is far too much work), fixes #58

--- a/assets/less/course-overlay.less
+++ b/assets/less/course-overlay.less
@@ -44,6 +44,15 @@
 
 
     .qrcode {
+        &:not(.enlarged) {
+            background-image: url("@{image-path}/ajax-indicator-black.svg");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: 50%;
+        }
+
+        margin-bottom: 1em;
+        margin-left: 1em;
         padding-top: 1em;
         .square(200px);
         float: right;
@@ -64,4 +73,3 @@
         display: none !important;
     }
 }
-
